bench/tests/plans/snapshots/r#mod__plans__wind_farm__Wind Farm - GroupedProduction1 (Optimized).snap
---
source: bench/tests/plans/wind_farm.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
Projection: ENC_PT(site_label) AS site_label, ENC_PT(wtur_label) AS wtur_label, year AS year, month AS month, day AS day, hour AS hour, minute_10 AS minute_10, ENC_PT(avg_val) AS avg_val
  Projection: site_label, wtur_label, year, month, day, hour, minute_10, avg_val
    Projection: site_label, wtur_label, year, month, day, hour, minute_10, <uuid>, <uuid> AS avg_val
      Projection: site_label, wtur_label, year, month, day, hour, minute_10, <uuid>
        Aggregate: groupBy=[[site_label AS site_label, wtur_label AS wtur_label, ENC_PT(year) AS year, ENC_PT(month) AS month, ENC_PT(day) AS day, ENC_PT(hour) AS hour, ENC_PT(minute_10) AS minute_10]], aggr=[[AVG(ENC_TV(val)) AS <uuid>]]
          Filter: EBV(BOOLEAN_AS_TERM(EBV(BOOLEAN_AS_TERM(EBV(BOOLEAN_AS_TERM(EBV(EQ(ENC_TV(site_label), ENC_TV(Struct({term_type:2,value:Wind Mountain,data_type:http://www.w3.org/2001/XMLSchema#string,language_tag:})))) AND EBV(EQ(ENC_TV(wtur_label), ENC_TV(Struct({term_type:2,value:A1,data_type:http://www.w3.org/2001/XMLSchema#string,language_tag:})))))) AND EBV(GEQ(ENC_TV(t), ENC_TV(Struct({term_type:2,value:2022-08-30T08:46:53,data_type:http://www.w3.org/2001/XMLSchema#dateTime,language_tag:})))))) AND EBV(LEQ(ENC_TV(t), ENC_TV(Struct({term_type:2,value:2022-08-30T21:46:53,data_type:http://www.w3.org/2001/XMLSchema#dateTime,language_tag:}))))))
            Projection: site, site_label, wtur_asp, wtur_label, wtur, gensys_asp, gensys, generator_asp, generator, ts, dp, val, t, minute_10, hour, day, month, YEAR(ENC_TV(t)) AS year
              Projection: site, site_label, wtur_asp, wtur_label, wtur, gensys_asp, gensys, generator_asp, generator, ts, dp, val, t, minute_10, hour, day, MONTH(ENC_TV(t)) AS month
                Projection: site, site_label, wtur_asp, wtur_label, wtur, gensys_asp, gensys, generator_asp, generator, ts, dp, val, t, minute_10, hour, DAY(ENC_TV(t)) AS day
                  Projection: site, site_label, wtur_asp, wtur_label, wtur, gensys_asp, gensys, generator_asp, generator, ts, dp, val, t, minute_10, HOURS(ENC_TV(t)) AS hour
                    Projection: site, site_label, wtur_asp, wtur_label, wtur, gensys_asp, gensys, generator_asp, generator, ts, dp, val, t, MUL(ENC_TV(Struct({term_type:2,value:10,data_type:http://www.w3.org/2001/XMLSchema#integer,language_tag:})), FLOOR(DIV(MINUTES(ENC_TV(t)), ENC_TV(Struct({term_type:2,value:10.0,data_type:http://www.w3.org/2001/XMLSchema#decimal,language_tag:}))))) AS minute_10
                      Projection: lhs.site AS site, lhs.site_label AS site_label, lhs.wtur_asp AS wtur_asp, lhs.wtur_label AS wtur_label, lhs.wtur AS wtur, lhs.gensys_asp AS gensys_asp, lhs.gensys AS gensys, lhs.generator_asp AS generator_asp, lhs.generator AS generator, lhs.ts AS ts, lhs.dp AS dp, lhs.val AS val, rhs.t AS t
                        Inner Join: lhs.dp = rhs.dp
                          SubqueryAlias: lhs
                            Projection: lhs.site AS site, lhs.site_label AS site_label, lhs.wtur_asp AS wtur_asp, lhs.wtur_label AS wtur_label, lhs.wtur AS wtur, lhs.gensys_asp AS gensys_asp, lhs.gensys AS gensys, lhs.generator_asp AS generator_asp, lhs.generator AS generator, lhs.ts AS ts, lhs.dp AS dp, rhs.val AS val
                              Inner Join: lhs.dp = rhs.dp
                                SubqueryAlias: lhs
                                  Projection: lhs.site AS site, lhs.site_label AS site_label, lhs.wtur_asp AS wtur_asp, lhs.wtur_label AS wtur_label, lhs.wtur AS wtur, lhs.gensys_asp AS gensys_asp, lhs.gensys AS gensys, lhs.generator_asp AS generator_asp, lhs.generator AS generator, lhs.ts AS ts, rhs.dp AS dp
                                    Inner Join: lhs.ts = rhs.ts
                                      SubqueryAlias: lhs
                                        Projection: lhs.site AS site, lhs.site_label AS site_label, lhs.wtur_asp AS wtur_asp, lhs.wtur_label AS wtur_label, lhs.wtur AS wtur, lhs.gensys_asp AS gensys_asp, lhs.gensys AS gensys, lhs.generator_asp AS generator_asp, lhs.generator AS generator, lhs.ts AS ts
                                          Inner Join: lhs.ts = rhs.ts
                                            SubqueryAlias: lhs
                                              Projection: lhs.site AS site, lhs.site_label AS site_label, lhs.wtur_asp AS wtur_asp, lhs.wtur_label AS wtur_label, lhs.wtur AS wtur, lhs.gensys_asp AS gensys_asp, lhs.gensys AS gensys, lhs.generator_asp AS generator_asp, lhs.generator AS generator, rhs.ts AS ts
                                                Inner Join: lhs.generator = rhs.generator
                                                  SubqueryAlias: lhs
                                                    Projection: lhs.site AS site, lhs.site_label AS site_label, lhs.wtur_asp AS wtur_asp, lhs.wtur_label AS wtur_label, lhs.wtur AS wtur, lhs.gensys_asp AS gensys_asp, lhs.gensys AS gensys, lhs.generator_asp AS generator_asp, lhs.generator AS generator
                                                      Inner Join: lhs.generator = rhs.generator
                                                        SubqueryAlias: lhs
                                                          Projection: lhs.site AS site, lhs.site_label AS site_label, lhs.wtur_asp AS wtur_asp, lhs.wtur_label AS wtur_label, lhs.wtur AS wtur, lhs.gensys_asp AS gensys_asp, lhs.gensys AS gensys, lhs.generator_asp AS generator_asp, rhs.generator AS generator
                                                            Inner Join: lhs.generator_asp = rhs.generator_asp
                                                              SubqueryAlias: lhs
                                                                Projection: lhs.site AS site, lhs.site_label AS site_label, lhs.wtur_asp AS wtur_asp, lhs.wtur_label AS wtur_label, lhs.wtur AS wtur, lhs.gensys_asp AS gensys_asp, lhs.gensys AS gensys, rhs.generator_asp AS generator_asp
                                                                  Inner Join: lhs.gensys = rhs.gensys
                                                                    SubqueryAlias: lhs
                                                                      Projection: lhs.site AS site, lhs.site_label AS site_label, lhs.wtur_asp AS wtur_asp, lhs.wtur_label AS wtur_label, lhs.wtur AS wtur, lhs.gensys_asp AS gensys_asp, lhs.gensys AS gensys
                                                                        Inner Join: lhs.gensys = rhs.gensys
                                                                          SubqueryAlias: lhs
                                                                            Projection: lhs.site AS site, lhs.site_label AS site_label, lhs.wtur_asp AS wtur_asp, lhs.wtur_label AS wtur_label, lhs.wtur AS wtur, lhs.gensys_asp AS gensys_asp, rhs.gensys AS gensys
                                                                              Inner Join: lhs.gensys_asp = rhs.gensys_asp
                                                                                SubqueryAlias: lhs
                                                                                  Projection: lhs.site AS site, lhs.site_label AS site_label, lhs.wtur_asp AS wtur_asp, lhs.wtur_label AS wtur_label, lhs.wtur AS wtur, lhs.gensys_asp AS gensys_asp
                                                                                    Inner Join: lhs.wtur = rhs.wtur
                                                                                      SubqueryAlias: lhs
                                                                                        Projection: lhs.site AS site, lhs.site_label AS site_label, lhs.wtur_asp AS wtur_asp, lhs.wtur_label AS wtur_label, lhs.wtur AS wtur, rhs.gensys_asp AS gensys_asp
                                                                                          Inner Join: lhs.wtur = rhs.wtur
                                                                                            SubqueryAlias: lhs
                                                                                              Projection: lhs.site AS site, lhs.site_label AS site_label, lhs.wtur_asp AS wtur_asp, lhs.wtur_label AS wtur_label, rhs.wtur AS wtur
                                                                                                Inner Join: lhs.wtur_asp = rhs.wtur_asp
                                                                                                  SubqueryAlias: lhs
                                                                                                    Projection: lhs.site AS site, lhs.site_label AS site_label, lhs.wtur_asp AS wtur_asp, rhs.wtur_label AS wtur_label
                                                                                                      Inner Join: lhs.wtur_asp = rhs.wtur_asp
                                                                                                        SubqueryAlias: lhs
                                                                                                          Projection: lhs.site AS site, lhs.site_label AS site_label, rhs.wtur_asp AS wtur_asp
                                                                                                            Inner Join: lhs.site = rhs.site
                                                                                                              SubqueryAlias: lhs
                                                                                                                Projection: lhs.site AS site, rhs.site_label AS site_label
                                                                                                                  Inner Join: lhs.site = rhs.site
                                                                                                                    SubqueryAlias: lhs
                                                                                                                      QuadPattern (?site <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#Site>)
                                                                                                                    SubqueryAlias: rhs
                                                                                                                      QuadPattern (?site <http://www.w3.org/2000/01/rdf-schema#label> ?site_label)
                                                                                                              SubqueryAlias: rhs
                                                                                                                QuadPattern (?site <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?wtur_asp)
                                                                                                        SubqueryAlias: rhs
                                                                                                          QuadPattern (?wtur_asp <http://www.w3.org/2000/01/rdf-schema#label> ?wtur_label)
                                                                                                  SubqueryAlias: rhs
                                                                                                    QuadPattern (?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?wtur_asp)
                                                                                            SubqueryAlias: rhs
                                                                                              QuadPattern (?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?gensys_asp)
                                                                                      SubqueryAlias: rhs
                                                                                        QuadPattern (?wtur <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#A>)
                                                                                SubqueryAlias: rhs
                                                                                  QuadPattern (?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?gensys_asp)
                                                                          SubqueryAlias: rhs
                                                                            QuadPattern (?gensys <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#RA>)
                                                                    SubqueryAlias: rhs
                                                                      QuadPattern (?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?generator_asp)
                                                              SubqueryAlias: rhs
                                                                QuadPattern (?generator <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?generator_asp)
                                                        SubqueryAlias: rhs
                                                          QuadPattern (?generator <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#GAA>)
                                                  SubqueryAlias: rhs
                                                    QuadPattern (?generator <https://github.com/magbak/chrontext#hasTimeseries> ?ts)
                                            SubqueryAlias: rhs
                                              QuadPattern (?ts <http://www.w3.org/2000/01/rdf-schema#label> "Production")
                                      SubqueryAlias: rhs
                                        QuadPattern (?ts <https://github.com/magbak/chrontext#hasDataPoint> ?dp)
                                SubqueryAlias: rhs
                                  QuadPattern (?dp <https://github.com/magbak/chrontext#hasValue> ?val)
                          SubqueryAlias: rhs
                            QuadPattern (?dp <https://github.com/magbak/chrontext#hasTimestamp> ?t)
